--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Paper, Scissors</title>
     <script src="app.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>LET'S PLAY</h1>
+    <button id="rock" data-choice="rock">Rock</button>
+    <button id="paper" data-choice="paper">Paper</button>
+    <button id="scissors" data-choice="scissors">Scissors</button>
+    <hr>
+    <div id="result"></div>
+  </body>
 </html>
