made game end after 5 rounds

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <h1>LET'S PLAY</h1>
+    <h1>LET'S PLAY</h1> 
     <button id="rock" data-choice="rock">Rock</button>
     <button id="paper" data-choice="paper">Paper</button>
     <button id="scissors" data-choice="scissors">Scissors</button>
+    <button id="reset" style="border-radius: 4px; border-color: pink;">reset</button>
     <hr>
     <div id="result"></div>
   </body>
