--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>LET'S PLAY</h1> 
-    <button id="rock" data-choice="rock">Rock</button>
-    <button id="paper" data-choice="paper">Paper</button>
-    <button id="scissors" data-choice="scissors">Scissors</button>
+    <button id="rock" class="btn" data-choice="rock">Rock</button>
+    <button id="paper" class="btn" data-choice="paper">Paper</button>
+    <button id="scissors" class="btn" data-choice="scissors">Scissors</button>
     <button id="reset" style="border-radius: 4px; border-color: pink;">reset</button>
     <hr>
     <div id="result"></div>
